force-app/main/default/objects/Financial_Holding__c/Financial_Holding__c.object-meta.xml
<CustomObject>
    <label>Financial Holding</label>
    <nameField>
        <label>Financial Holding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Holdings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>