force-app/main/default/objects/Financial_Holding__c/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>