force-app/main/default/objects/Financial_Holding__c/fields/Cost_Basis__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis__c</fullName>
    <label>Cost Basis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>