force-app/main/default/objects/Financial_Holding__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount</referenceTo>
    <relationshipLabel>Financial Holdings</relationshipLabel>
    <relationshipName>Financial_Holdings</relationshipName>
    <type>Lookup</type>
</CustomField>